<resources>
    <string name="app_name">玩猫</string>
    <string name="app_desc">快乐游戏，轻松对战</string>
    <string name="btn_login">登录</string>
    <string name="btn_login_back"><u>返回登录</u></string>
    <string name="pass_hint">密码(6-20字符 区分大小写)</string>
    <string name="input_name_hint">昵称(3-20个字母、数字)</string>
    <string name="forget"><u>忘记密码</u></string>
    <string name="phonelogin"><u>验证码登录</u></string>
    <string name="regist"><u>用户注册</u></string>
    <string name="agree"><u>同意用户协议</u></string>
    <string name="btn_next">下一步</string>
    <string name="input_iphone_hint">请输入11位手机号码</string>
    <string name="code_hint">手机验证码</string>
    <string name="btn_code">获取验证码</string>
    <string name="error_net">网络异常</string>
    <string name="try_again">重试</string>
    <string name="error_server">服务器无响应</string>
    <string name="error_param">参数错误</string>
    <string name="cancel">取消</string>
    <string name="success_add">添加成功</string>
    <string name="submit">提交</string>
    <string name="btn_regit">注册</string>
    <string name="loading">加载中...</string>
    <string name="nextpage">...</string>
    <string name="nodata_r">暂无数据</string>
    <string name="nodata_f">暂无好友</string>
    <string name="nodata">:( 没数据了</string>
    <string name="tip_phone">请输入手机号码</string>
    <string name="tip_pass">请输入至少6位密码</string>
    <string name="tip_qq">请输入QQ号码</string>
    <string name="input_comment_hint">请输入内容</string>
    <string name="point">积分:</string>
</resources>
