<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/loading"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <com.sunlin.playcat.view.CircleTitleTopView
        android:id="@+id/loadTitle"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        app:drawable_top="@drawable/cry"
        app:text="@string/error_net"
        app:text_color="@color/textColor_low"
        app:text_size="@dimen/text_m"
        android:layout_above="@+id/loading"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"></com.sunlin.playcat.view.CircleTitleTopView>
    <Button
        android:id="@+id/btnAgain"
        style="@style/btnMain"
        android:visibility="invisible"
        android:layout_width="200dp"
        android:layout_height="@dimen/btn_h_l"
        android:layout_below="@+id/loadTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/try_again" />
    <TextView
        android:id="@+id/cancelTitle"
        android:visibility="invisible"
        android:textSize="@dimen/text_m"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/btnAgain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/cancel" />

</RelativeLayout>