<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.sunlin.playcat.ForgetPassActivity">
    <include
        layout="@layout/nativebar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/include" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_gravity="center_horizontal"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:divider="@drawable/downline"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:showDividers="end|middle">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="44dp"
            android:divider="@drawable/spacer15"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@mipmap/phone_s" />

            <EditText
                android:id="@+id/phoneEdit"
                style="@style/textInput"
                android:layout_width="130dp"
                android:layout_height="25dp"
                android:ems="10"
                android:hint="@string/input_iphone_hint"
                android:inputType="phone" />

            <Button
                style="@style/btnSmall"
                android:id="@+id/btnSendCode"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:text="@string/btn_code" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:divider="@drawable/spacer15"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@mipmap/code" />

            <EditText
                android:id="@+id/codeEdit"
                style="@style/textInput"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:hint="@string/code_hint"
                android:inputType="number" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:divider="@drawable/spacer15"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@mipmap/pass" />

            <EditText
                android:id="@+id/passEdit"
                style="@style/textInput"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:hint="@string/tip_pass"
                android:inputType="textPassword" />

        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btnSubmit"
        style="@style/btnMain"
        android:layout_marginTop="20dp"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:text="@string/submit" />
</LinearLayout>
