<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sunlin.playcat.MainActivity">

    <include
        layout="@layout/nativebar_layout"
        android:layout_width="0dp"
        android:layout_height="44dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/include" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:divider="@drawable/downline"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:showDividers="end|middle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:divider="@drawable/spacer15"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@mipmap/phone_s" />

            <EditText
                android:id="@+id/phoneEdit"
                style="@style/textInput"
                android:layout_width="130dp"
                android:layout_height="25dp"
                android:ems="10"
                android:hint="@string/input_iphone_hint"
                android:inputType="phone" />

            <Button
                style="@style/btnSmall"
                android:id="@+id/btnSendCode"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:text="@string/btn_code" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:divider="@drawable/spacer15"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@mipmap/code" />

            <EditText
                android:id="@+id/codeEdit"
                style="@style/textInput"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:hint="@string/code_hint"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:id="@+id/relativeLayout">

        <Button
            android:id="@+id/btnNext"
            style="@style/btnMain"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:text="@string/btn_next"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            style="@style/textLink1"
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnNext"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/btn_login" />

        <TextView
            android:id="@+id/agree"
            style="@style/textLink2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btnNext"
            android:paddingTop="10dp"
            android:paddingLeft="4dp"
            android:paddingBottom="10dp"

            android:clickable="true"
            android:text="@string/agree" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/agree16"
            android:layout_below="@+id/btnNext"
            android:layout_marginTop="9dp"
            android:layout_toLeftOf="@+id/agree"
            android:layout_toStartOf="@+id/agree" />


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <LinearLayout
            style="@style/line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"></LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="第三方登录"
            android:background="@android:color/white"
            android:textColor="@color/textColor_low"
            android:textSize="@dimen/text_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/qqlogin"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                app:srcCompat="@mipmap/qq45" />

            <ImageView
                android:id="@+id/weixinlogin"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                app:srcCompat="@mipmap/weixin45" />

            <ImageView
                android:id="@+id/weibologin"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                app:srcCompat="@mipmap/weibo45" />
        </LinearLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>